--- a/index.html
+++ b/index.html
@@ -4,49 +4,55 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="icon" type="image/svg+xml" href="/thumb.svg" />
+  <link rel="stylesheet" href="./src/style.css">
   <script type="module" defer src="/src/main.js"></script>
   <title>Rock Paper Scissors</title>
 </head>
-<body>
+<body class=" mx-auto w-full grid bg-gradient-to-b from-blue-900 via-blue-800 to-blue-700 text-white p-10">
   <!-- Header-Bereich -->
-  <header>
-    <h1>Rock Paper Scissors</h1>
-    <div>
-      <span>Score</span>
-      <span id="score">0</span>
+  <header class="container flex border rounded-2xl p-4 m-4 justify-between w-full">
+      <img src="./images/logo.svg" alt="Logo" class="w-16 h-16" />
+      <div class="flex">
+      <h1 class="text-6xl">Rock<br> Paper<br> Scissors</h1>
+    </div>
+    
+    <div  class="grid relative  bg-slate-50 text-black w-24 text-center rounded-xl">
+      <span class="text-xl font-sans font-extrabold">Score</span>
+      <span id="score" class="text-6xl font-sans font-extrabold">0</span>
     </div>
   </header>
 
   <!-- Hauptbereich mit Buttons -->
-  <main>
-    <button data-choice="paper">
+  <main class="w-full flex justify-center">
+    <button data-choice="paper" class="relative h-32 w-32 border-8 border-yellow-500 rounded-full hover:w-36 hover:h-36">
       <img src="./images/paper.svg" alt="Paper" />
     </button>
-    <button data-choice="scissors">
+    <button data-choice="scissors" class="relative bottom-48 h-32 w-32 border-8 border-red-500 rounded-full hover:w-36 hover:h-36" >
       <img src="./images/scissors.svg" alt="Scissors" />
     </button>
-    <button data-choice="rock">
+    <button data-choice="rock" class="relative h-32 w-32 border-8 border-blue-500 rounded-full hover:w-36 hover:h-36">
       <img src="./images/rock.svg" alt="Rock" />
     </button>
   </main>
 
   <!-- Startbildschirm -->
-  <div id="startscreen">
-    <h1>Rock</h1>
-    <h2>Paper</h2>
-    <h3>Scissors</h3>
+  <div id="startscreen" class="flex-col leading-extranone text-center" style="display:none;">
+  <div class="text-center"> 
+    <h1 class="text-9xl font-bold tracking-wide leading-extranone">Rock</h1>
+    <h2 class="text-9xl font-bold tracking-wide leading-extranone">Paper</h2>
+    <h3 class="text-9xl font-bold tracking-wide leading-extranone">Scissors</h3>
     <button id="startbutton">Start Game</button>
   </div>
 
   <!-- Regeln -->
-  <div id="rules">
+  <div id="rulesbutton" style="display:none;">
     <h2>Rules</h2>
     <p>Rock Paper Scissors is a game that is played between two players...</p>
     <img src="./images/close.svg" alt="Close" id="closebutton" />
   </div>
 
   <!-- Ergebnisanzeige -->
-  <div id="results">
+  <div id="results" style="display:none;">
     <h3 id="result">You win</h3>
     <div>
       <p>You chose:</p>
