--- a/index.html
+++ b/index.html
@@ -37,12 +37,12 @@
   </main>
 
   <!-- Startbildschirm -->
-  <div id="startscreen" class="flex-col leading-extranone text-center" style="display:none;">
+  <div id="startscreen" class="flex-col leading-extranone text-center">
   <div class="text-center"> 
     <h1 class="text-9xl font-bold tracking-wide leading-extranone">Rock</h1>
     <h2 class="text-9xl font-bold tracking-wide leading-extranone">Paper</h2>
     <h3 class="text-9xl font-bold tracking-wide leading-extranone">Scissors</h3>
-    <button id="startbutton">Start Game</button>
+    <button class="border-2 rounded-full p-4 mt-10 text-4xl hover:text-6xl" id="startbutton">Start Game</button>
   </div>
 
   <!-- Regeln -->
